Added FAQ and footer

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
 :root{
     font-family: "Poppins", sans-serif;
     color-scheme: light;
-    --hero-bg: #fafaf7;
+    --hero-bg: #fcfcf4;
     --services-bg: #feffff;
     --about-bg: #fafaf7;
     --transition-duration: 0.5s;
