--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,10 @@
 
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 .services{
   font-family: "Noto Sans Myanmar", sans-serif;
   color-scheme: light;
